# RustVault

./: .env.example  .gitignore  Cargo.toml  README.md  UI_PLAN.md  clippy.toml  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  deploy.yml
crates/rustvault-ai/: Cargo.toml
crates/rustvault-ai/src/: error.rs  lib.rs
crates/rustvault-core/: Cargo.toml
crates/rustvault-core/src/: error.rs  lib.rs
crates/rustvault-core/src/models/: mod.rs
crates/rustvault-core/src/services/: mod.rs
crates/rustvault-db/: Cargo.toml
crates/rustvault-db/migrations/: .gitkeep
crates/rustvault-db/src/: error.rs  lib.rs  pool.rs
crates/rustvault-db/src/repos/: mod.rs
crates/rustvault-import/: Cargo.toml
crates/rustvault-import/src/: error.rs  lib.rs
crates/rustvault-server/: Cargo.toml
crates/rustvault-server/src/: app.rs  main.rs
crates/rustvault-server/src/routes/: mod.rs
docker/: Dockerfile  config.toml  docker-compose.yml
docs/adr/: 0001-backend.md  0002-frontend.md  0003-api.md  0004-data-model.md  0005-user-experience.md  0006-error-handling.md  0007-testing.md  0008-auth-jwt-design.md
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md
docs/book/src/features/: auto-rules.md  import-pipeline.md  multi-currency.md  reports.md
docs/book/src/getting-started/: first-import.md  setting-up-accounts.md
docs/book/src/import-formats/: camt053.md  mt940.md  ofx-qfx.md  xlsx.md
docs/book/src/self-hosting/: backup-restore.md  oidc-setup.md
docs/contributing/: CONTRIBUTING.md
docs/development_plan/: API_PLAN.md  BACKEND_PLAN.md  IMPLEMENTATION_PLAN.md  UI_PLAN.md
docs/security/: SECURITY.md  auth-architecture.md  hardening-guide.md  threat-model.md
docs/wireframes/: README.md  banks-accounts.excalidraw  budget.excalidraw  categories.excalidraw  dashboard.excalidraw  import-wizard.excalidraw  mobile-layout.excalidraw  reports.excalidraw  rules.excalidraw  settings.excalidraw  shell-layout.excalidraw  sidebar.excalidraw  tags.excalidraw  transaction-detail.excalidraw  transaction-list.excalidraw
locales/: _meta.toml
locales/en-US/: auth.ftl  common.ftl  errors.ftl
web/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.tsx
web/src/i18n/: index.tsx
web/src/locales/en-US/: auth.json  common.json
