[package]
name = "rustvault-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RustVault domain logic — models, services, rule engine, i18n"

[lib]
name = "rustvault_core"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
validator = { workspace = true }

# Internal crates
rustvault-db = { workspace = true }

# Auth
argon2 = "0.5"
jsonwebtoken = "10.3.0"
aes-gcm = "0.10"
rand = "0.10.0"
sha2 = "0.10"

# OIDC
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

# Rule engine
regex = "1"

# i18n
fluent = "0.17"
fluent-syntax = "0.12"
unic-langid = "0.9"
