[package]
name = "rustvault-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RustVault import engine — file parsers, format detection, deduplication"

[lib]
name = "rustvault_import"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal crates
rustvault-core = { workspace = true }

# Parsers
csv = "1"
quick-xml = "0.39.2"
calamine = "0.33"

# Encoding & detection
encoding_rs = "0.8"
infer = "0.19"

# String similarity (duplicate detection)
strsim = "0.11"
